...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Tasks" id="ItG-7i-0tT"/>
                    <connections>
                        <outlet property="tasksCollectionView" destination="2yf-mS-loV" id="0IH-ve-zoi"/>
...
                                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hug-2j-v3W">
                                                                        <rect key="frame" x="0.0" y="0.0" width="39.5" height="35.5"/>
                                                                        <state key="normal" image="SERVICOS"/>
                                                                        <connections>
                                                                            <action selector="goToServicesScreen:" destination="u4R-gG-cm4" eventType="touchUpInside" id="6PV-eL-Sv9"/>
...
                                                                        </connections>
                                                                    </button>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Endereço" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints
                                                                        <rect key="frame" x="0.0" y="35.5" width="40" height="14.5"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
                                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nYS-BK-BwK">
                                                                        <rect key="frame" x="0.0" y="0.0" width="39.5" height="35.5"/>
                                                                        <state key="normal" image="COMENTARIOS"/>
                                                                        <connections>
                                                                            <action selector="commentariesButtonPressed:" destination="u4R-gG-cm4" eventType="touchUpInside" id="kuX-yD-x6h"/>
...
                                                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vuI-kq-18v">
                                                                        <rect key="frame" x="0.0" y="0.0" width="40" height="35.5"/>
                                                                        <state key="normal" image="FAVORITOS copy"/>
                                                                    </button>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favoritos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="6" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraint
...
